# Seer

./: .gitignore  CMakeLists.txt  README.md  client.cpp  controller.hpp  darwin-connect-manual.ipynb  darwin-connect.ipynb  input.json  loadModules.sh  messages.hpp  receiver.hpp  rpc.hpp  schematic.h  sender.hpp  server.cpp  test3.cpp  testSerialize.cpp  utility.hpp  utils.hpp
InWrap/: inSituWrap.hpp
InWrap/filters/: README.md  filterFactory.hpp  filterIncludes.hpp  filterInterface.hpp  filter_globalMin.hpp  filter_seerVTKOffset.hpp
InWrap/python-utils/: InWrapMochi.py  createJson.py
InWrap/testApps/: papiDemo.cpp
InWrap/testApps/testCatalyst/: catalystHelper.h  testSim.cpp
InWrap/utils/: catalystAdaptor.h  dataLayout.hpp  log.hpp  memory.hpp  mochi.hpp  papiWrapper.hpp  senseiBridge.hpp  strConvert.hpp  timer.hpp  timers.hpp  utils.hpp
InWrap/vtkStructures/: readme.md  rectilinearGrid.h  structuredGrid.h  unstructuredGrid.h  vtkDataStruct.h  vtkMPI.h
Seer_Client/: InWrapMochi.py  SeerClient.py  Tau_test.ipynb  darwin-connect-manual.ipynb  darwin-connect.ipynb  test_modules_import.ipynb  test_server_connect.ipynb  visualize.py
Seer_Client/utils/: vtkRendering.py
Seer_Dash/: SeerDash.py  Seer_dash.py  Seer_dash_helper.py  config.json
Seer_Dash/seer_refactor/: log.txt  parseText.py  runSeerClientScript.sh  seerClientScript.py
Seer_Dash/server_helpers/: runSeerClientScript.sh  seerClientScript.py
Seer_Mochi/: launchMochiServer.py
Seer_Sim/: inSituWrap.hpp  seerInSituWrap.hpp
Seer_Sim/utils/: argsParser.hpp  catalystAdaptor.h  log.hpp  memory.hpp  mochi.hpp  papiWrapper.hpp  senseiBridge.hpp  strConvert.hpp  timer.hpp  utils.hpp
Seer_Sim/vtkStructures/: polyData.h  rectilinearGrid.h  structuredGrid.h  unstructuredGrid.h  vtkDataStruct.h  vtkMPI.h
Seer_Utils/: vocab.json
client/: sender.hpp
demoApps/: CMakeLists.txt  miniAppStructured.cpp  miniAppUnstruc.cpp  readme.md
env/: loadModules.sh
evn/: env_darwin_jupyter.sh  env_darwin_mochiServer.sh  env_darwin_new.sh  env_darwin_sim.sh  env_pascal_laptop.sh  env_setup_darwin.sh
inputs/: input-test-structured.json  input-test-structured_nasm.json  input-test-unstructured.json  input-test-unstructured_nasm.json  input-test.json  input-test_local.json
jupyter/.ipynb_checkpoints/: visualize-checkpoint.ipynb
old/: data.hpp  serialize.hpp  simTest.cpp  test2.cpp
python-utils/: Mochi_insitu.ipynb  ParaView_expandAttributes.py  client.py  createJson.py  shutDownServer.py
python-utils/utils/: heatmap.py
scripts/: env_setup_darwin.sh  env_setup_spack.sh  miniAppStruc_darwin.sh  runBatch__256_16_16_scaling_mochi.sh  runBatch__64_8_8_glaton_mochi.sh
scripts/catalyst/: miniAppStructured_views.py  miniAppUnstr_views.py  write_vtm.py
scripts/env/: darwin_setup.sh  local_run.sh
scripts/sensei/: Histogram.py  hist_py.xml  testPython.py  testSensei.xml
server/: CMakeLists.txt  dataServer.cpp  dataStore.hpp  receiver.hpp  server.cpp
src/: CMakeLists.txt  inSituWrap.hpp
src/demoApps/: miniAppUnstruc.cpp  readme.md
src/testApps/: mochiMpiTest.cpp  papiTest
src/utils/: argsParser.hpp  catalystAdaptor.h  log.hpp  memory.hpp  timer.hpp  utils.hpp
src/vtkStructures/: polyData.h  rectilinearGrid.h  structuredGrid.h  vtkDataStruct.h
testing/: Dashboard.ipynb  InSituMetricsVis.py  InSituVariable.py  Untitled1.ipynb  app.py  layout.ipynb  runPython.sh  testInSituVis.ipynb  testPython.py
testing/testApps/: testInterface.h
testing/testApps/testCatalyst/: CMakeLists.txt  unstructuredGrid.h
testing/testApps/testPython/: CMakeLists.txt  pyHelper.hpp  testPy.cpp
testing/testApps/testPython/modules/: multiply.py
testing/testApps/testPython/singleFileTests/: hello.py  py_function.py  testSimple.cpp  testSimple2.cpp
utils/: utility.hpp
